Fix ~35 errors across 11 by-version files (round 5)
jdk8: Marked withdrawn JEPs (150, 157-159, 163) with correct titles
jdk10: Removed 11 duplicate JEP entries
jdk11: Epsilon GC experimental (not production), var is reserved type name (not keyword), HTTP Client is alternative (not replacement), separated mutually exclusive GC flags
jdk12: Fixed switch example (MONDAY/FRIDAY are weekdays, not weekend)
jdk14: Added incubator status to jpackage (JEP 343)
jdk15: Removed JEP 391 (belongs to JDK 17), fixed defineHiddenClass method name
jdk16: Fixed JEP 393 to Third Incubator (not Second)
jdk17: Fixed rmiregistry->rmid (JEP 407), removed JDK 21+ flag from JDK 17 config
jdk18: Fixed Vector API incubator number and JEP (417 not 414), removed duplicate entry
jdk21: Fixed ZGC not default generational in JDK 21, Thread.stop() throws UOE (not removed)
jdk26: Fixed Subtask (not Future), AOT flag syntax, 0-RTT clarification, G1 throughput qualification

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>